AC_PREREQ(2.52)

# Process this file with autoconf to produce a configure script.
AC_INIT([JSON C Library], 0.7, [michael@metaparadigm.com], [json-c])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)

# Checks for programs.

# Checks for libraries.

# Checks for header files.
AM_CONFIG_HEADER(config.h)
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h strings.h syslog.h unistd.h [sys/param.h] stdarg.h)

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_VPRINTF
AC_FUNC_MEMCMP
# AC_FUNC_*ALLOC macros are misleading, they check for GNU libc compatible implementations.
# Tru64 and AIX don't have compatible mallloc/reallocs, but it's not a problem in JSON-C
case `uname -s` in
	OSF1|AIX);;
	*)
		AC_FUNC_MALLOC
		AC_FUNC_REALLOC
	;;
esac

AC_PROG_LIBTOOL
AC_CHECK_FUNCS(strndup strerror vsnprintf vasprintf open vsyslog strncasecmp)

LT_INIT

AC_OUTPUT([
Makefile
json.pc
])
